# rtbkit

./: .gitignore  Exchange.md  Makefile  README.md  Setup.md  configs12_JL12317x03_6.1_w300_HV30S_JL12317-03.json
configs/: 3.10_SP_WL_2015-09-17.csv  6.10_MPL_WL_2015-10-13.csv  9.10_MPL_TEST_BL_2015-10-06.csv  9.10_MPL_WL_2015-09-14.csv  AUS_BRX  AUS_Mobile.json  AUS_Mobile_8.json  AUS_cTV.json  AUS_cTV_7.json  AUS_w300_HV.json  AUS_w300_HV_6.json  AUS_w300_HV_6_KV.json  AUS_w300_HV_KV.json  AUS_w300_SV.json  AUS_w300_SV_KV.json  AUS_w300_SV_kv.json  AUS_w350_HV.json  AUS_w350_HV_5.json  AUS_w350_HV_5_KV.json  AUS_w350_HV_KV.json  AUS_w350_SV.json  AUS_w350_SV_KV.json  AUS_w350_SV_kv.json  AUS_w480_HV_39.json  Acc MLP WL 2015-09-10.csv  AccXax_MPL_WL_2015-10-13.csv  Acc_MPL_WL_2015-09-10.csv  Accuen_temp_Blacklist.csv  Adap_10_6.1_w300_HV30S_651808.json  Adap_11.1_w350_SV50_651775.json  Adap_11.1_w350_SV50_651775_dealid.json  Adap_11.1_w350_WL_BL_HV50S_600758.json  Adap_11.1_w350_WL_BL_HV50S_600758_HF.json  Adap_11.1_w350_WL_BL_NV_651866.json  Adap_11.1_w350_WL_BL_SV50_651775.json  Adap_11.1_w350_WL_BL_SV50_651775_HF.json  Adap_11.1_w350_WL_HV50S_600758.json  Adap_11.1_w350_WL_HV50_600758.json  Adap_11.1_w350_WL_NV_651866.json  Adap_11.1_w350_WL_SV50_651775.json  (+1200 more)
configs/bidders/: ATLACVRTEST_AllMobile.json  ATLACVR_AllMobile.json  ATLNEX_w300_HV.json  ATLNEX_w300_NV.json  ATLNEX_w300_SV.json  ATL_AllMobile.json  ATL_AllMobile1.json  ATL_AllMobile2.json  ATL_AllMobile3.json  ATL_AllMobile4.json  ATL_AllMobileT.json  ATL_AllMobileT_80.json  ATL_AllMobileT_ncr.json  ATL_AllMobileT_nobid.json  ATL_AllMobile_NCVR.json  ATL_AllMobile_ncr.json  ATL_TradcTV.json  ATL_w300_HV.json  ATL_w300_HV_CR.json  ATL_w300_HV_NCR.json  ATL_w300_NV.json  ATL_w300_NV_CR.json  ATL_w300_NV_NCR.json  ATL_w300_SV.json  ATL_w300_SV_CR.json  ATL_w300_SV_NCR.json  ATL_w350_HV.json  ATL_w350_NV.json  ATL_w350_SV.json  AUS_Mobile.json  AUS_cTV.json  AUS_w300_SV.json  BAK_AllMobile.json  BAK_AllcTV.json  BAK_w350_SV.json  BIR_AllMobile.json  BIR_AllcTV.json  BIR_Mobile.json  BIR_TradcTV.json  BIR_cTV.json  (+394 more)
go/gobid/cmd/rtbd/: exelate.go  jamloop.go  main.go  openrtb.go  openrtb_test.go  rtbkit.go  rtbkit_test.go  uuid.go  uuid_test.go
go/gobid/defaults/: fallback.go
go/gobid/rtb/: client.go  periodic.go  request.go  server.go  server_test.go  service.go  ticker.go
go/gobid/rtb/ext/forensiq/: forensiq.go  forensiq_test.go
go/gojl/: main.go
plugins/: CMakeLists.txt  adaptv_exchange_connector.cc  adaptv_exchange_connector.h  adaptvhv_exchange_connector.cc  adaptvhv_exchange_connector.h  basic_bidding_agent.cc  basic_bidding_agent.h  brightroll-openrtb.proto  brightroll_exchange_connector.cc  brightroll_exchange_connector.h  content_category.itm  file_watcher.cc  file_watcher.h  forensiq_augmentor.cc  forensiq_augmentor.h  forensiq_augmentor_runner.cc  gen-contentcategory.py  geo_pipeline.cc  geo_pipeline.h  http_augmentor_headers.cc  http_augmentor_headers.h  http_viewability_augmentor.cc  http_viewability_augmentor.h  http_viewability_augmentor_runner.cc  liverail_exchange_connector.cc  liverail_exchange_connector.h  moat_data_parser.cc  moat_data_parser.h  publisher_connector.cc  publisher_connector.h  redis_viewability_backend.cc  redis_viewability_backend.h  traffic_analytics.cc  traffic_analytics.h  tremor_exchange_connector.cc  tremor_exchange_connector.h  utils.cc  utils.h  viewability_augmentor.cc  viewability_augmentor.h  (+3 more)
plugins/testing/: CMakeLists.txt  brightroll_exchange_connector_test.cc  device_type_filter_test.cc  geo_pipeline_test.cc  tremor_exchange_connector_test.cc  white_black_list_filter_test.cc
rtbkit/: Makefile
rtbkit/rtbkit/common/: auction.cc  augmentor_interface.cc  augmentor_interface.h  bid_request.cc  bid_request.h  common.mk  creative_configuration.h  exchange_connector.h  static_configuration.cc  static_configuration.h
rtbkit/rtbkit/core/agent_configuration/: agent_config.cc  agent_config.h  agent_configuration.mk  include_exclude.h  white_black_list.cc  white_black_list.h
rtbkit/rtbkit/core/banker/: null_banker.cc
rtbkit/rtbkit/core/monitor/: monitor_client.cc  monitor_endpoint.cc
rtbkit/rtbkit/core/post_auction/: post_auction_service.cc
rtbkit/rtbkit/core/router/: augmentation_loop.cc  augmentation_loop.h  router.cc  router.h  router_runner.cc
rtbkit/rtbkit/core/router/filters/: creative_filters.cc  creative_filters.h  priority.h  static_filters.cc  static_filters.h
rtbkit/rtbkit/examples/: data_logger_ex.cc  examples.mk
rtbkit/rtbkit/openrtb/: openrtb.h
rtbkit/rtbkit/plugins/: plugins.mk
rtbkit/rtbkit/plugins/adserver/: standard_adserver_connector.cc
rtbkit/rtbkit/plugins/augmentor_interface/: augmentor_interface.mk  http_augmentor_interface.cc  http_augmentor_interface.h  multi_augmentor_interface.cc  multi_augmentor_interface.h  zmq_augmentor_interface.cc  zmq_augmentor_interface.h
rtbkit/rtbkit/plugins/bid_request/: openrtb_bid_request.cc  openrtb_bid_request_parser.cc
rtbkit/rtbkit/plugins/bidder_interface/: http_bidder_interface.cc  http_bidder_interface.h
rtbkit/rtbkit/plugins/exchange/: http_auction_handler.cc  http_exchange_connector.cc  http_exchange_connector.h  openrtb_exchange_connector.cc  spotx_exchange_connector.cc  spotx_exchange_connector.h
rtbkit/rtbkit/plugins/exchange/testing/: exchange_testing.mk  spotx_exchange_connector_test.cc
rtbkit/rtbkit/testing/: creative_configuration_test.cc
rtbkit/soa/: soa.mk
rtbkit/soa/logger/: logger.mk
rtbkit/soa/service/: async_writer_source.cc  http_header.cc
rtbkit/soa/service/testing/: http_client_test.cc  service_testing.mk
rtbkit/soa/types/: date.cc
rtbkit/soa/utils/: scope.h
scripts/: common.sh  deploy-rtb  descendance-watcher.py  kill-rtb  launch-rtb
