include_directories(..)

add_executable(tremor_exchange_connector_test tremor_exchange_connector_test.cc)
target_link_libraries(tremor_exchange_connector_test tremor_exchange bid_test_utils bidding_agent rtb_router agents_bidder agent_configuration monitor gc banker boost_unit_test_framework)

add_test(tremor_exchange_connector_test ${EXECUTABLE_OUTPUT_PATH}/tremor_exchange_connector_test)

add_executable(brightroll_exchange_connector_test brightroll_exchange_connector_test.cc)
target_link_libraries(brightroll_exchange_connector_test brightroll_exchange bid_test_utils bidding_agent rtb_router agents_bidder agent_configuration monitor gc banker boost_unit_test_framework)

add_test(brightroll_exchange_connector_test ${EXECUTABLE_OUTPUT_PATH}/brightroll_exchange_connector_test)
file(COPY brightroll-bidrequest.dat DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_executable(white_black_list_filter_test white_black_list_filter_test.cc)
target_link_libraries(white_black_list_filter_test rtb arch utils jsoncpp bid_request types openrtb value_description services agent_configuration filter_registry static_filters boost_unit_test_framework)

add_executable(device_type_filter_test device_type_filter_test.cc)
target_link_libraries(device_type_filter_test rtb arch utils jsoncpp bid_request types openrtb value_description services agent_configuration filter_registry static_filters boost_unit_test_framework)
add_test(device_type_filter_test ${EXECUTABLE_OUTPUT_PATH}/device_type_filter_test)

add_executable(geo_pipeline_test geo_pipeline_test.cc)
target_link_libraries(geo_pipeline_test rtb arch utils jsoncpp geo_pipeline bid_request types value_description boost_unit_test_framework)
add_test(geo_pipeline_test ${EXECUTABLE_OUTPUT_PATH}/geo_pipeline_test)
